fix: divider overlaps the text when the background is transparent (#639)

--- a/frontend/elements/src/components/divider/styles.sass
+++ b/frontend/elements/src/components/divider/styles.sass
@@ -1,7 +1,7 @@
 @use '../../variables'
 @use '../../mixins'
 
-.dividerWrapper
+.divider
   @include mixins.font
 
   display: variables.$divider-display
@@ -9,20 +9,18 @@
   color: variables.$color-shade-1
   margin: variables.$item-margin
 
-.divider
-  border-bottom-style: variables.$border-style
-  border-bottom-width: variables.$border-width
+  .line
+    border-bottom-style: variables.$border-style
+    border-bottom-width: variables.$border-width
 
-  color: inherit
-  font: inherit
+    color: inherit
+    font: inherit
 
-  width: 100%
-  text-align: center
-  line-height: .1em
-  margin: 0 auto
+    width: 100%
 
   .text
     font: inherit
     color: inherit
     background: variables.$background-color
     padding: variables.$divider-padding
+    line-height: .1em
